# GLSL_Birds

./: .gitignore  CMakeLists.txt  README.md  Shader.cpp  Shader.h  basic.frag  basic.vert  bird.frag  bird.vert  compute.frag  compute.vert  global.h  glutils.cpp  glutils.h  main.cpp  main.h  system.cpp  system.h  utility.cpp  utility.h  vbobird.cpp  vbobird.h
executable/: bird.frag  compute.frag
